@@ -151,6 +151,7 @@ static Image *ReadGRADIENTImage(const ImageInfo *image_info,
         start_color.green));
       start_color.blue=ClampToQuantum(QuantumRange*DecompandsRGB(QuantumScale*
         start_color.blue));
+      start_pixel.colorspace=RGBColorspace;
     }
   if (IssRGBColorspace(stop_pixel.colorspace) != MagickFalse)
     {
@@ -160,6 +161,7 @@ static Image *ReadGRADIENTImage(const ImageInfo *image_info,
         stop_color.green));
       stop_color.blue=ClampToQuantum(QuantumRange*DecompandsRGB(QuantumScale*
         stop_color.blue));
+      stop_pixel.colorspace=RGBColorspace;
     }
   status=GradientImage(image,LocaleCompare(image_info->magick,"GRADIENT") == 0 ?
     LinearGradient : RadialGradient,PadSpread,&start_color,&stop_color);
@@ -169,13 +171,10 @@ static Image *ReadGRADIENTImage(const ImageInfo *image_info,
       return((Image *) NULL);
     }
   (void) SetImageColorspace(image,start_pixel.colorspace);
+  if (IsGrayImage(image,exception) != MagickFalse)
+    (void) SetImageColorspace(image,GRAYColorspace);
   if ((start_pixel.matte == MagickFalse) && (stop_pixel.matte == MagickFalse))
     (void) SetImageAlphaChannel(image,DeactivateAlphaChannel);
-  if (IssRGBColorspace(start_pixel.colorspace) != MagickFalse)
-    {
-      (void) SetImageColorspace(image,RGBColorspace);
-      (void) TransformImageColorspace(image,sRGBColorspace);
-    }
   return(GetFirstImageInList(image));
 }
 
